# termit

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  TODO  bootstrap.sh  config.h.in  configure.in  index.html
.github/workflows/: build.yml
cmake/: cmake_uninstall.cmake.in
doc/: CMakeLists.txt  Makefile.am  README  init.lua.example  lua_api.md  lua_api.txt  rc.lua.example  session.example  termit.1  termit.appdata.xml  termit.desktop  termit.example  termit.metainfo.xml
etc/: CMakeLists.txt
etc/termit/: colormaps.lua  rc.lua  utils.lua
po/: CMakeLists.txt  POTFILES.in  ca.po  da.po  de.po  es.po  fr.po  hu.po  ja.po  ko.po  nl.po  pl.po  ru.po  sv.po  termit.pot  zh_TW.po
src/: CMakeLists.txt  Makefile.am  Sources.cmake  callbacks.c  callbacks.h  configs.c  configs.h  eventbindings.c  eventbindings.h  kb.py  keybindings.c  keybindings.h  lua_api.c  lua_api.h  lua_conf.c  sessions.c  sessions.h  termit.c  termit.h  termit_core_api.c  termit_core_api.h  termit_preferences.c  termit_style.c  termit_style.h  utils.c  utils.h
utils/: CMakeLists.txt  slack-desc  termit-1.3.3.ebuild  termit-2.10.0.ebuild  termit.SlackBuild  termit.SlackBuild.in  termit.ebuild  termit.ebuild.in  termit.spec.in
