AC_INIT(src/termit.c)
AC_CONFIG_HEADER(config.h)

PACKAGE=termit
VERSION=1.0.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

GTK2_REQUIRED_VERSION=2.8
PKG_CHECK_MODULES(GTK2, gtk+-2.0 >= $GTK2_REQUIRED_VERSION)
AC_SUBST(GTK2_CFLAGS)
AC_SUBST(GTK2_LIBS)

VTE_REQUIRED_VERSION=0.12
PKG_CHECK_MODULES(VTE, vte >= $VTE_REQUIRED_VERSION)
AC_SUBST(VTE_CFLAGS)
AC_SUBST(VTE_LIBS)

AC_PROG_LIBTOOL

ALL_LINGUAS="ru"
AM_GNU_GETTEXT
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(LOCALEDIR, "${ac_default_prefix}/${DATADIRNAME}/locale", [Gettext locale dir])
else
  AC_DEFINE_UNQUOTED(LOCALEDIR, "${prefix}/${DATADIRNAME}/locale", [Gettext locale dir])
fi

CFLAGS="${CFLAGS=}"
AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],, enable_debug=no)
if test "x$enable_debug" = "xyes";
then
CFLAGS="-g -DDEBUG"
AC_MSG_RESULT(yes)
else
CFLAGS="$CFLAGS -O3"
AC_MSG_RESULT(no)
fi

AC_OUTPUT(Makefile src/Makefile doc/Makefile intl/Makefile po/Makefile.in)

echo 
echo Configuration for $PACKAGE $VERSION :
echo --------------------------------
echo 
echo Source code location ....: $srcdir
echo Host System Type ........: $host
echo Preprocessor ............: $CC $CPPFLAGS
echo Compiler ................: $CC $CFLAGS
echo Linker ..................: $CC $LDFLAGS $LIBS
echo GTK2 version ............: `pkg-config --modversion gtk+-2.0`
echo VTE version .............: `pkg-config --modversion vte`
echo NLS/gettext .............: $USE_NLS
if test "x$enable_debug" = "xyes";
then
echo Debug ...................: enabled
else
echo Debug ...................: disabled
fi
echo Install path ............: $prefix
echo 
echo Now type 'make' to build $PACKAGE $VERSION,
echo and then 'make install' for installation.
echo
